--- a/src/template.html
+++ b/src/template.html
@@ -57,16 +57,7 @@
 		<section id="projects">
 			<h3 class="sec-header">Projects</h3>
 
-			<div class="project-cont">
-				<div class="project-preview" aria-label="Battleship preview"></div>
-				<h2 class="project-title">Battleship</h2>
-				
-				<div class="project-link">
-					<a href="" aria-label="Battleship repository" target="_blank" class="repo-link"></a>
-					<a href="" aria-label="Battleship live preview" target="_blank" class="live-link"></a>
-				</div>
-
-				<p class="project-desc">This is the project description text</p>
+			<div id="projects-main">
 
 			</div>
 				
